src/objects/Project_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Project_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF(
  ISBLANK(Closed_Date__c), 
  TODAY() - DATEVALUE(CreatedDate), 
  Closed_Date__c - DATEVALUE(CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_by_Current_User__c</fullName>
        <formula>$User.Id = CreatedById</formula>
        <label>Created by Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change_Date__c</fullName>
        <label>Last Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_In_Place__c</fullName>
        <formula>if(Opportunity__r.MSA_Opportunity__c != null,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSA In Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This Opportunity does not belong to the selected Account. Please select another Opportunity.</errorMessage>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Only Opportunities for the selected Account are shown.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recalculate_Sharing_on_Save__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Sharing on Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This Contact does not belong to the selected Account. Please select another Contact.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <infoMessage>Only Contacts for the selected Account are shown.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Project_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Detail__c</fullName>
        <label>Status Detail</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Fulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Fulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfulfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10K Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Plan Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Staffing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Work Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project__c</columns>
        <columns>Request_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Detail__c</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Appirio_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Contact__c</columns>
        <columns>Age__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>appirio</value>
        </filters>
        <label>Appirio Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_progress_requests</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Contact__c</columns>
        <columns>Age__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Under Review,Pending Contract</value>
        </filters>
        <label>In Progress Requests</label>
    </listViews>
    <listViews>
        <fullName>My_Completed_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Contact__c</columns>
        <columns>Age__c</columns>
        <columns>Project__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>My Completed Requests</label>
    </listViews>
    <listViews>
        <fullName>My_Project_Requests</fullName>
        <columns>Project_Name__c</columns>
        <columns>NAME</columns>
        <columns>Last_Status_Change_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Detail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_by_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Project Requests</label>
    </listViews>
    <listViews>
        <fullName>New_Requests</fullName>
        <columns>NAME</columns>
        <columns>Project_Name__c</columns>
        <columns>Request_Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Detail__c</columns>
        <columns>Age__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Requests</label>
    </listViews>
    <listViews>
        <fullName>Open_Project_Requests</fullName>
        <columns>Project_Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Project__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open Project Requests</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Work Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
    </sharingReasons>
</CustomObject>